<resources>
    <string name="app_name">POTD</string>
    <string name="potd_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="theme">Switch theme</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="chipLabelYesterday2">Two days back</string>
    <string name="chipLabelYesterday">Yesterday</string>
    <string name="chipLabelToday">Today</string>
    <string name="theme_steel_desc">Blue Theme</string>
    <string name="theme_copper_desc">Orange Theme</string>
    <string name="label_tabitem_mars">Mars</string>
    <string name="label_tabitem_earth">Earth</string>
    <string name="label_tabitem_system">System</string>
    <string name="label_tabitem_bookmarks">Bookmarks</string>
    <string name="label_chip_next">Next</string>
    <string name="label_chip_previous">Previous</string>
    <string name="label_chip_today">Today</string>
    <string name="label_chip_hd">HD</string>
    <string name="label_description_loading">Loading…</string>
    <string name="label_image_desc">Picture of the day</string>
    <string name="toolbar_app_title">NASA</string>
    <string name="appbar_scrolling_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="collapsing_toolbar_title">Collapsing Toolbar</string>
    <string name="button">Button</string>
    <string name="lorem_ipsum">
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. "
        "Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, "
        "when an unknown printer took a galley of type and scrambled it to make a type "
        "specimen book. It has survived not only five centuries, but also the leap into "
        "electronic typesetting, remaining essentially unchanged. It was popularised in "
        "the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, "
        "and more recently with desktop publishing software like Aldus PageMaker "
        "including versions of Lorem Ipsum.\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. "
        "Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, "
        "when an unknown printer took a galley of type and scrambled it to make a type "
        "specimen book. It has survived not only five centuries, but also the leap into "
        "electronic typesetting, remaining essentially unchanged. It was popularised in "
        "the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, "
        "and more recently with desktop publishing software like Aldus PageMaker "
        "including versions of Lorem Ipsum.\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. "
        "Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, "
        "when an unknown printer took a galley of type and scrambled it to make a type "
        "specimen book. It has survived not only five centuries, but also the leap into "
        "electronic typesetting, remaining essentially unchanged. It was popularised in "
        "the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, "
        "and more recently with desktop publishing software like Aldus PageMaker "
        "including versions of Lorem Ipsum.\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. "
        "Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, "
        "when an unknown printer took a galley of type and scrambled it to make a type "
        "specimen book. It has survived not only five centuries, but also the leap into "
        "electronic typesetting, remaining essentially unchanged. It was popularised in "
        "the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, "
        "and more recently with desktop publishing software like Aldus PageMaker "
        "including versions of Lorem Ipsum.\n"
    </string>
    <string name="menu_animation_fragment">AnimationFragment</string>
    <string name="menu_motion_layout">MotionLayout</string>
    <string name="menu_collapsingtoolbar">CollapsingToolbar</string>
    <string name="button_label_red">RED</string>
    <string name="button_label_orange">ORANGE</string>
    <string name="button_label_green">GREEN</string>
    <string name="no_photos_for_date">"No photos for %s"</string>
    <string name="photo_counter_and_date_label">"%1$s/%2$s\n%3$s"</string>
    <string name="photo_counter">"%1$s/%2$s"</string>
    <string name="picture_of_the_day_icon">picture of the day icon</string>
    <string name="mars_icon">mars icon</string>
    <string name="earth_icon">earth icon</string>
    <string name="email_button">email button</string>
    <string name="unused_button">unused button</string>
    <string name="off_indicator">off indicator</string>
    <string name="on_indicator">on indicator</string>
    <string name="photo">photo</string>
    <string name="bookmark_description">Bookmark description</string>
    <string name="delete_bookmark">Delete bookmark</string>
</resources>