<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/systemConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPrevDay"
            style="@style/StyleChipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_chip_previous"
            app:chipIcon="@drawable/ic_baseline_navigate_prev_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipNextDay"
            style="@style/StyleChipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_chip_next"
            app:chipIcon="@drawable/ic_baseline_navigate_next_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipResetDate"
            style="@style/StyleChipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_chip_today" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipHD"
            style="@style/StyleChipFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_chip_hd" />

    </com.google.android.material.chip.ChipGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/label_image_desc"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/bg_system" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/label_description_loading"
        app:layout_constraintBottom_toTopOf="@id/indicatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/indicatorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:src="@drawable/ic_indicator_on" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:src="@drawable/ic_indicator_off" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:src="@drawable/ic_indicator_off" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/bookmark_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/bookmark_button_margin"
        android:layout_marginBottom="@dimen/bookmark_button_margin"
        android:button="@drawable/ic_add_bookmark"
        android:gravity="bottom|right|end"
        android:minWidth="0dp"
        android:minHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>