<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPrevDay"
            style="@style/StyleChipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_chip_previous"
            app:chipIcon="@drawable/ic_baseline_navigate_prev_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipNextDay"
            style="@style/StyleChipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_chip_next"
            app:chipIcon="@drawable/ic_baseline_navigate_next_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipResetDate"
            style="@style/StyleChipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_chip_today" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/label_description_loading"
        app:layout_constraintBottom_toTopOf="@id/indicatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/indicatorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/ic_indicator_off" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/ic_indicator_on" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/ic_indicator_off" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>